# dsm

./: ADDING_OPERATORS.md  AGENTS.md  DETAILED_TEST_DEVIATIONS.md  LICENSE  OCAML_TESTS_NOT_IN_JAI.md  TEST_COMPARISON_REPORT.md  dsm.opam  dune-project  glucose.ard  glucose.csv  part1.txt  part2.txt  precedence.txt  readme.md  test.txt  tokenizer_architecture.md  tokens.txt
c-arden/: .gitignore  AGENTS.md  Makefile  compile_commands.json  compiler.cc  compiler.hh  garbage.hh  interpreter.cc  interpreter.hh  little-pratt.c  little-pratt.cc  little-pratt.hh  little-pratt.sh  lp  main.c  main.cc  parser.cc  parser.hh  test.cc  tokenizer.c  tokenizer.cc  tokenizer.h  tokenizer.hh  vm.cc  vm.hh
c-arden/.zed/: tasks.json
c-arden/tests/: first_program.ardi
jai-arden/: .gitignore  AGENTS.md  REFACTOR_SUMMARY.md  ast.json  interpreter.jai  main.jai  parser.jai  tokenizer.jai
jai-arden/cjson/: generate.jai  linux.jai
jai-arden/docs/: IMPLEMENTATION_ROADMAP.md  (+9 more)
lark_parser/: AGENTS.md  Makefile  grammar.lark  interpreter.py  parser.py  pyproject.toml  test_interpreter.py  test_interpreter_pytest.py
lemon/: .gitignore  Makefile  cjson.c  dune  grammar.c  grammar.h  grammar.out  grammar.y  grammar.y.old  grammar.zig  grammar_stubs.c  main  main.c
lib/: binding.ml  dsm.ml  dune  helper.ml  interpreter.ml  parser.ml  time.ml  tokenizer.ml
llm/: fix_failwith.md  fix_throw_zig.md  fixtimezig.md  refactor_handling_abstraction.md
parser/: example.txt  ice.lark  ice.py  ice_parser.py  pyproject.toml
test/: dune
zig_tokenizer/: build.zig  build.zig.zon  test_trace.zig
(+98 files in other folders)
